fix: overflow home

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@ body {
   height: 100%;
   font-family: 'Short Stack', cursive;
   background-color: #F1FBDA;
+  overflow-x: hidden;
 }
 .time-cursor{
   cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='35' height='42' viewport='0 0 100 100' style='fill:black;font-size:21px;'><text y='50%'>⏳️</text></svg>") 16 0,auto;
